clusters/cl01tl/manifests/elastic-operator/Service-elastic-operator-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-operator-webhook
  namespace: elastic-operator
  labels:
    app.kubernetes.io/name: elastic-operator
    app.kubernetes.io/instance: elastic-operator
    app.kubernetes.io/version: "3.5.0"
    helm.sh/chart: eck-operator-3.5.0
    app.kubernetes.io/managed-by: Helm
    eck.k8s.elastic.co/watched: "true"
spec:
  ports:
    - name: https
      port: 443
      targetPort: 9443
  selector:
    app.kubernetes.io/name: elastic-operator
    app.kubernetes.io/instance: elastic-operator
