clusters/cl01tl/manifests/elastic-operator/ValidatingWebhookConfiguration-elastic-operator.elastic-operator.k8s.elastic.co.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: elastic-operator.elastic-operator.k8s.elastic.co
  labels:
    app.kubernetes.io/name: elastic-operator
    app.kubernetes.io/instance: elastic-operator
    app.kubernetes.io/version: "3.5.0"
    helm.sh/chart: eck-operator-3.5.0
    app.kubernetes.io/managed-by: Helm
  namespace: elastic-operator
webhooks:
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-agent-k8s-elastic-co-v1alpha1-agent
    failurePolicy: Ignore
    name: elastic-agent-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - agent.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - agents
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-apm-k8s-elastic-co-v1-apmserver
    failurePolicy: Ignore
    name: elastic-apm-validation-v1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - apm.k8s.elastic.co
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - apmservers
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-apm-k8s-elastic-co-v1beta1-apmserver
    failurePolicy: Ignore
    name: elastic-apm-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - apm.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - apmservers
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-beat-k8s-elastic-co-v1beta1-beat
    failurePolicy: Ignore
    name: elastic-beat-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - beat.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - beats
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-enterprisesearch-k8s-elastic-co-v1-enterprisesearch
    failurePolicy: Ignore
    name: elastic-ent-validation-v1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - enterprisesearch.k8s.elastic.co
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - enterprisesearches
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-enterprisesearch-k8s-elastic-co-v1beta1-enterprisesearch
    failurePolicy: Ignore
    name: elastic-ent-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - enterprisesearch.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - enterprisesearches
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-elasticsearch-k8s-elastic-co-v1-elasticsearch
    failurePolicy: Ignore
    name: elastic-es-validation-v1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - elasticsearch.k8s.elastic.co
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - elasticsearches
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-elasticsearch-k8s-elastic-co-v1beta1-elasticsearch
    failurePolicy: Ignore
    name: elastic-es-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - elasticsearch.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - elasticsearches
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-ems-k8s-elastic-co-v1alpha1-mapsservers
    failurePolicy: Ignore
    name: elastic-ems-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - maps.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - elasticmapsservers
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-kibana-k8s-elastic-co-v1-kibana
    failurePolicy: Ignore
    name: elastic-kb-validation-v1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - kibana.k8s.elastic.co
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - kibanas
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-kibana-k8s-elastic-co-v1beta1-kibana
    failurePolicy: Ignore
    name: elastic-kb-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - kibana.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - kibanas
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-autoscaling-k8s-elastic-co-v1alpha1-elasticsearchautoscaler
    failurePolicy: Ignore
    name: elastic-esa-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - autoscaling.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - elasticsearchautoscalers
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-scp-k8s-elastic-co-v1alpha1-stackconfigpolicies
    failurePolicy: Ignore
    name: elastic-scp-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - stackconfigpolicy.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - stackconfigpolicies
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-logstash-k8s-elastic-co-v1alpha1-logstash
    failurePolicy: Ignore
    name: elastic-logstash-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - logstash.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - logstashes
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-autoops-k8s-elastic-co-v1alpha1-autoopsagentpolicies
    failurePolicy: Ignore
    name: elastic-autoops-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1]
    sideEffects: None
    rules:
      - apiGroups:
          - autoops.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - autoopsagentpolicies
  - clientConfig:
      service:
        name: elastic-operator-webhook
        namespace: elastic-operator
        path: /validate-epr-k8s-elastic-co-v1alpha1-packageregistry
    failurePolicy: Ignore
    name: elastic-epr-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - packageregistry.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - packageregistries
